compile-tests/fixtures/compile-errors/instantiation-not-enough-type-parameters/input.ts
import createValidator, { register } from "../../../../dist/typecheck.macro";

interface Foo<X, Y> {}
register("Foo");
createValidator<Foo<string>>();
